fixed sublabel and vertical align

--- a/src/platform/core/expansion-panel/_expansion-panel-theme.scss
+++ b/src/platform/core/expansion-panel/_expansion-panel-theme.scss
@@ -25,6 +25,9 @@
       overflow: hidden;
       text-overflow: ellipsis;
       margin-right: 5px;
+      &, & * {
+        vertical-align: middle;
+      }
     }
     .td-expansion-secondary {
       color: md-color($foreground, secondary-text);
